@@ -1,4 +1,4 @@
 ## Process this file with automake to produce Makefile.in.
 
-SUBDIRS = C da es
+SUBDIRS = C da es it
 
