@@ -1,7 +1,7 @@
 figdir=
 docname=gnobots2
 lang=it
-omffile=
-entities=
+omffile=gnobots2-it.omf
+entities=legal.xml
 include $(top_srcdir)/xmldocs.make
 dist-hook: app-dist-hook
