@@ -1,0 +1,80 @@
+  <legalnotice id="legalnotice">
+	<para>
+	  Questo documento può essere copiato, distribuito e/o modificato
+	  solo in conformità con i termini della GNU Free Documentation
+	  License (GFDL) Versione 1.1 o delle versioni successive 
+	  pubblicate dalla Free Software Foundation senza sezioni 
+	  invariabili, frontespizi e testi di copertina. Una copia
+	  della GFDL è disponibile su questo <ulink type="help"
+	  url="ghelp:fdl">link</ulink> o nel file COPYING-DOCS
+	  distribuito con questo manuale.
+         </para>
+         <para> Questo manuale fa parte di una raccolta di manuali 
+		  GNOME distribuita in conformità con la GFDL. Per poter 
+		  distribuire questo manuale separatamente, è necessario 
+		  inserirvi una copia della licenza, come descritto nella 
+		  sezione 6 della licenza.
+	</para>
+
+	<para>
+	  Molti dei nomi usati dalle aziende per distinguere i propri
+	  prodotti e servizi sono rivendicati come marchi. Quando questi
+	  nomi compaiono nella documentazione di GNOME, e i partecipanti
+	  al GNOME Documentation Project sono consapevoli del loro 
+	  utilizzo, essi vengono scritti in lettere maiuscole o con 
+	  l'iniziale maiuscola.
+	</para>
+
+	<para>
+	  QUESTO DOCUMENTO E LE SUE VERSIONI MODIFICATE VENGONO FORNITI 
+	  IN BASE AI TERMINI DELLA GNU FREE DOCUMENTATION LICENSE,
+	  CON L'INTESA CHE:
+
+	  <orderedlist>
+		<listitem>
+		  <para>IL DOCUMENTO VIENE FORNITO SENZA GARANZIE DI ALCUN 
+		            TIPO, ESPLICITE O IMPLICITE, INCLUSE, MA SENZA 
+					LIMITAZIONE, LE GARANZIE ATTESTANTI CHE IL 
+					DOCUMENTO O LE SUE VERSIONI MODIFICATE SIANO 
+					PRIVI DI DIFETTI, COMMERCIALIZZABILI, IDONEI A
+					UN DETERMINATO SCOPO O CHE NON VIOLINO DIRITTI
+					DI TERZI. SI DECLINA QUALUNQUE RESPONSABILITÀ 
+					RIGUARDO AI RISCHI INERENTI LA QUALITÀ, 
+					L'ACCURATEZZA E LE PRESTAZIONI DEL DOCUMENTO O
+					DI UNA SUA VERSIONE MODIFICATA. QUALORA UN 
+					DOCUMENTO O UNA SUA VERSIONE MODIFICATA DOVESSERO
+                    PRESENTARE QUALUNQUE TIPO DI DIFETTO, IL COSTO DI 
+					EVENTUALI INTERVENTI DI ASSISTENZA, RIPARAZIONE
+					O CORREZIONE SARÀ A CARICO DELL'UTENTE (NON DEL 
+					REDATTORE INIZIALE, DELL'AUTORE O DI ALTRI 
+					COLLABORATORI). QUESTA LIMITAZIONE DELLA GARANZIA 
+					COSTITUISCE PARTE ESSENZIALE DELLA LICENZA. 
+					L'USO DEL DOCUMENTO O DELLE SUE VERSIONI MODIFICATE
+					È CONSENTITO SOLO ENTRO I TERMINI DI QUESTA 
+					LIMITAZIONE DELLA GARANZIA; 
+		  </para>
+		</listitem>
+		<listitem>
+		  <para>IN NESSUNA CIRCOSTANZA E PER NESSUNA RAGIONE LEGALE, 
+		               INCLUSI I PRINCIPI DI COLPA (INCLUSA LA NEGLIGENZA),
+                       ACCORDO CONTRATTUALE O ALTRO, SARÀ POSSIBILE 
+					   CONSIDERARE L'AUTORE, IL REDATTORE INIZIALE, GLI
+					   ALTRI COLLABORATORI, QUALUNQUE DISTRIBUTORE DEL
+					   DOCUMENTO O DI UNA SUA VERSIONE MODIFICATA O
+					   QUALUNQUE FORNITORE DELLE PERSONE CITATE, 
+					   RESPONSABILE NEI CONFRONTI DI QUALUNQUE PERSONA 
+					   PER DANNI DIRETTI, INDIRETTI, SPECIALI, INCIDENTALI
+					   O CONSEGUENTI DI QUALUNQUE NATURA, INCLUSI, MA
+					   SENZA LIMITAZIONE, I DANNI PER PERDITA DI 
+					   AVVIAMENTO, INTERRUZIONE DEL LAVORO, GUASTO O
+					   MALFUNZIONAMENTO DEL COMPUTER O QUALUNQUE ALTRO 
+					   DANNO O PERDITA DERIVANTE O CORRELATA ALL'USO DEL
+					   DOCUMENTO O DI UNA SUA VERSIONE MODIFICATA,
+                       ANCHE QUALORA LE PERSONE CITATE FOSSERO STATE
+					   INFORMATE DELLA POSSIBILITÀ DI TALI DANNI.
+		  </para>
+		</listitem>
+	  </orderedlist>
+	</para>
+  </legalnotice>
+
