@@ -1,3 +1,11 @@
+2004-02-22  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* help/Makefile.am:
+	* help/it/gnobots2.xml:
+	* help/it/gnobots2-it.omf:
+	* help/it/legal.xml:
+	* help/it/Makefile.am: Restored the old Italian documentation.
+
 2004-02-19  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* properties.c (show_properties_dialog): Typo. Fixes bug #134442.
